--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,6 +1,8 @@
 packages: 
   yum:
-    mysql-devel: []
+    python3-devel: []
+    mariadb-devel: []
+    gcc: []
   pip:
     Flask: []
     flask-login: []
