--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ MarkupSafe==2.0.1
 mysqlclient==2.0.3
 numpy==1.21.1
 pandas==1.3.0
+plotly==5.1.0
 pyasn1==0.4.8
 python-dateutil==2.8.2
 python-editor==1.0.4
@@ -31,6 +32,7 @@ rsa==4.7.2
 s3transfer==0.5.0
 six==1.16.0
 SQLAlchemy==1.4.21
+tenacity==8.0.1
 urllib3==1.26.6
 Werkzeug==2.0.1
 WTForms==2.3.3
