--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.4
 ecdsa==0.17.0
 Flask==2.0.1
 Flask-Login==0.5.0
+flask-marshmallow==0.14.0
 Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
@@ -18,6 +19,8 @@ Jinja2==3.0.1
 jmespath==0.10.0
 Mako==1.1.4
 MarkupSafe==2.0.1
+marshmallow==3.13.0
+marshmallow-sqlalchemy==0.26.1
 mysqlclient==2.0.3
 numpy==1.21.1
 pandas==1.3.0
@@ -30,6 +33,7 @@ pytz==2021.1
 requests==2.26.0
 rsa==4.7.2
 s3transfer==0.5.0
+simplejson==3.17.3
 six==1.16.0
 SQLAlchemy==1.4.21
 tenacity==8.0.1
