--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ mysqlclient==2.0.3
 numpy==1.21.1
 pandas==1.3.0
 plotly==5.1.0
+PuLP==2.5.0
 pyasn1==0.4.8
 python-dateutil==2.8.2
 python-editor==1.0.4
